<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".bmiFragment">

    <TextView
        android:id="@+id/fr_bmiHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="BMI Calculator"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnter_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fr_bmiHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_bmiHeightField"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:helperText="Feet"
        app:layout_constraintStart_toEndOf="@+id/tvEnter_info"
        app:layout_constraintTop_toBottomOf="@id/fr_bmiHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_bmiEditTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Height"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_bmiHeightField2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:helperText="Inches"
        app:layout_constraintStart_toEndOf="@+id/fr_bmiHeightField"
        app:layout_constraintTop_toBottomOf="@id/fr_bmiHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_bmiEditTextHeight2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Height"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fr_bmiWeightField"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/white"
        app:helperText="Pounds"
        app:layout_constraintStart_toEndOf="@id/fr_bmiHeightField2"
        app:layout_constraintTop_toBottomOf="@id/fr_bmiHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fr_bmiEditTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Weight"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fr_buttonBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="Calculate BMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_bmiHeightField2" />

    <TextView
        android:id="@+id/fr_bmiCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fr_buttonBMI"
        app:layout_constraintStart_toEndOf="@+id/fr_buttonBMI"
        app:layout_constraintTop_toTopOf="@+id/fr_buttonBMI" />

    <TextView
        android:id="@+id/bmiInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Underweight = &lt;18.5 \n\nNormal weight = 18.5–24.9 \n\nOverweight = 25–29.9 \n\nObesity = BMI of 30 or greater"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/fr_buttonBMI"
        app:layout_constraintTop_toBottomOf="@+id/fr_buttonBMI" />



</androidx.constraintlayout.widget.ConstraintLayout>